--- a/login.html
+++ b/login.html
@@ -11,36 +11,52 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-    <div class="center-container pad-lr-80 col-md-12">
-        <div class="pad-r-40 pad-b-40 col-md-4 col-lg-4 col-sm-4">
-            <form class="form-signin">
-                <center class="mb-3">
-                <img class="mb-3" src="assets/img/yotani-logo-full.png" alt="">
-                </center>
-                <div class="form-group">
-                    <label for="inputUsername" class="">Username</label>
-                    <input type="email" id="inputUsername" class="form-control" required autofocus="">
+<body class="d-flex flex-column h-100">
+    <div class="card card-body  justify-content-center no-border">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="pad-b-20 col-md-4 col-lg-4 col-sm-4">
+                    <form class="form-signin">
+                        <center class="mb-5">
+                        <img class="logo-in" src="assets/img/yotani-logo-full.png" alt="">
+                        </center>
+                        <div class="form-group">
+                            <label for="inputUsername" class="">No. Telepon / Email</label>
+                            <input type="text" id="inputUsername" class="form-control" placeholder="No. Telepon / Email" required autofocus="">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword" class="">Kata Sandi</label>
+                            <input type="password" id="inputPassword" class="form-control" placeholder="Kata Sandi" required>
+                            <span toggle="#inputPassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
+                        </div>
+                        <div class="checkbox mb-4">
+                            <label class="checkwrap">
+                                <input type="checkbox" value="remember-me"> Ingat Saya
+                                <span class="checkmark"></span>
+                            </label>
+                            <a href="" class="forgot-pass-text float-right">Lupa Kata Sandi</a>
+                        </div>
+                        <button class="btn btn-primary btn-block mb-3" type="submit">Masuk</button>
+                        <button class="btn btn-secondary btn-block mb-3" type="button">Kembali</button>
+                        <div class="text-center">Belum punya akun?<a href="register.html" class="font-italic"> Daftar</a></div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="inputPassword" class="">Kata Sandi</label>
-                    <input type="password" id="inputPassword" class="form-control" required>
-                    <span toggle="#inputPassword" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                <div class="pad-l-40 col-md-8 col-lg-8 col-sm-8">
+                    <img src="assets/img/yotani_login.png" alt="" class="col-md-12">
                 </div>
-                <div class="checkbox mb-4">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Ingat Saya
-                    </label>
-                    <a href="" class="forgot-pass-text float-right">Lupa Kata Sandi</a>
-                </div>
-                <button class="btn btn-primary btn-block mb-3" type="submit">Log in</button>
-                <div class="text-center">Belum punya akun?<a href="" class="font-italic"> Daftar</a></div>
-            </form>
-        </div>
-        <div class="pad-l-40 col-md-8 col-lg-8 col-sm-8">
-            <img src="assets/img/yotani_login.png" alt="" class="col-md-12">
+            </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="text-muted">
+
+        <!-- Copyright -->
+        <div class="footer-copyright bg-green text-center py-3">Copyright © 2020 by PT. Indocyber Global Teknologi</div>
+        <!-- Copyright -->
+  
+    </footer>
+    <!-- Footer -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <!-- Library  -->
