--- a/register.html
+++ b/register.html
@@ -78,7 +78,7 @@
     <footer class="text-muted">
 
         <!-- Copyright -->
-        <div class="footer-copyright bg-green text-center py-3">Copyright © 2020 by PT. Indocyber Global Teknologi</div>
+        <div class="footer-copyright bg-green text-center py-3">Copyright © 2020 by PT Indocyber Global Teknologi</div>
         <!-- Copyright -->
   
     </footer>
