--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -56,8 +56,8 @@
               Transaksi
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Kuota Pabrik</a>
-              <a class="dropdown-item" href="#">Penerimaan Dari Petani</a>
+              <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
+              <a class="dropdown-item" href="">Penerimaan Dari Petani</a>
               <!-- <div class="dropdown-divider"></div> -->
               <a class="dropdown-item" href="#">Pembayaran</a>
             </div>
