--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="kuota-pabrik.html">Kuota Pabrik</a>
-              <a class="dropdown-item" href="#">Penerimaan Dari Petani</a>
+              <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
               <!-- <div class="dropdown-divider"></div> -->
               <a class="dropdown-item" href="#">Pembayaran</a>
             </div>
