--- a/kuota-pabrik.html
+++ b/kuota-pabrik.html
@@ -56,7 +56,7 @@
               Transaksi
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Kuota Pabrik</a>
+              <a class="dropdown-item" href="">Kuota Pabrik</a>
               <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
               <!-- <div class="dropdown-divider"></div> -->
               <a class="dropdown-item" href="#">Pembayaran</a>
