add otp, forgot pass, basic css

--- a/register.html
+++ b/register.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">  
-  <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/icons/fontawesome/styles.min.css">
+  <link rel="stylesheet" href="assets/css/basic.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -64,10 +65,10 @@
                             <span toggle="#inputPassword" class="fa fa-fw fa-eye-slash field-icon toggle-password"></span>
                         </div>
                         <div class="row">
-                            <div class="col no-padding-left">
-                                <a  href="index.html" class="btn btn-secondary btn-block mt-4">Kembali</a>
+                            <div class="col">
+                                <a  href="login.html" class="btn btn-secondary btn-block mt-4">Kembali</a>
                             </div>
-                            <div class="col no-padding-right">
+                            <div class="col">
                                 <a href="index.html" class="btn btn-secondary-gradient btn-block mt-4">Daftar</a>
                             </div>
                         </div>
