--- a/login.html
+++ b/login.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">  
-  <link href="https://fonts.googleapis.com/css2?family=Muli:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/icons/fontawesome/styles.min.css">
+  <link rel="stylesheet" href="assets/css/basic.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -34,10 +35,10 @@
                                 <input type="checkbox" value="remember-me"> Ingat Saya
                                 <span class="checkmark"></span>
                             </label>
-                            <a href="" class="forgot-pass-text float-right">Lupa Kata Sandi</a>
+                            <a href="lupa-password.html" class="forgot-pass-text float-right">Lupa Kata Sandi</a>
                         </div>
-                        <button class="btn btn-primary btn-block mb-3" type="submit">Masuk</button>
-                        <button class="btn btn-secondary btn-block mb-3" type="button">Kembali</button>
+                        <a href="index.html" class="btn btn-primary btn-block mb-3">Masuk</a>
+                        <a href="index.html" class="btn btn-secondary btn-block mb-3">Kembali</a>
                         <div class="text-center">Belum punya akun?<a href="register.html" class="font-italic"> Daftar</a></div>
                     </form>
                 </div>
