--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -232,7 +232,7 @@
   <!-- Footer -->
   <!-- Modal -->
   <div class="modal fade" id="detailPenerimaan" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="detailPenerimaanLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header bg-hijau">
                 <h6 class="modal-title" id="detailPenerimaanLabel">Detail Penerimaan</h6>
@@ -243,68 +243,22 @@
             <div class="modal-body">
                 <form>
                     <div class="col-md-12 no-padding">
-                      <div class="col-md-6 float-left">
-                        <h6 class="green font-weight-bold mb-3">Petani</h6>
-                        <div class="form-group">
-                            <p class="mb-0">Kartika Wati</p>
-                            <b>08123456789</b>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="">Jam Operasional<span class="text-danger"> *</span></label>
-                            <div class="input-group">
-                              <input type="time" class="form-control" required>
-                              <span class="input-group-addon">-</span>
-                              <input type="time" class="form-control" required>
-                            </div>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
-                        </div>
-                        <div class="form-group">
-                            <label class="">Kuota Pabrik<span class="text-danger"> *</span></label>
-                            <input type="email" class="form-control" required>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
-                        </div>
+                      <h6 class="green font-weight-bold mb-3">Petani</h6>
+                      <div class="form-group">
+                          <p class="mb-0">Kartika Wati</p>
+                          <b>08123456789</b>
                       </div>
-                      <div class="col-md-6 float-left">
-                        <div class="form-group">
-                            <input type="checkbox" autocomplete="off"> Sedang dalam pemeliharaan
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="">Periode Pemeliharaan</label>
-                            <div class="input-group">
-                              <input type="date" class="form-control">
-                              <span class="input-group-addon">-</span>
-                              <input type="time" class="form-control">
-                            </div>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="">Mulai Beroperasi</label>
-                            <div class="input-group">
-                              <input type="date" class="form-control">
-                              <span class="input-group-addon">-</span>
-                              <input type="time" class="form-control">
-                            </div>
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
-                        </div>
-                        <div class="form-group">
-                            <label class="">Terakhir Terima</label>
-                            <input type="email" class="form-control">
-                            <div class="invalid-feedback">Mohon isi kolom ini</div>
-                        </div>
+                      <div class="form-group">
+                          <p class="mb-0">Diana Santri</p>
+                          <b>08123456789</b>
+                      </div>
+                      <div class="form-group">
+                          <p class="mb-0">Jaro Petang</p>
+                          <b>089567827228</b>
                       </div>
                     </div>
                    
                 </form>
-            </div>
-            <div class="modal-footer">
-              <div class="row">
-                  <div class="col no-padding-left">
-                      <a  href="" class="btn btn-secondary btn-block">Kembali</a>
-                  </div>
-                  <div class="col no-padding-right">
-                      <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
-                  </div>
-              </div>
             </div>
         </div>
     </div>
