--- a/kuota-pabrik.html
+++ b/kuota-pabrik.html
@@ -36,8 +36,8 @@
     
       <div class="collapse navbar-collapse font-weight-medium" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Beranda</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Dashboard</a>
@@ -51,19 +51,19 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Petani</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item active dropdown">
             <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Transaksi
+              Transaksi <span class="sr-only">(current)</span>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="">Kuota Pabrik</a>
               <a class="dropdown-item" href="penerimaan-petani.html">Penerimaan Dari Petani</a>
               <!-- <div class="dropdown-divider"></div> -->
-              <a class="dropdown-item" href="#">Pembayaran</a>
+              <a class="dropdown-item" href="pembayaran.html">Pembayaran</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">List Harga</a>
+            <a class="nav-link" href="list-harga.html">List Harga</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Report</a>
